<resources>
    <string name="app_name">AplicatieMedicala</string>
    <string name="loginPage">Login</string>
    <string name="registerPage">Register</string>
    <string name="register">Register</string>
    <string name="get_started">Get Started</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="passwordR">Password</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="open_sidebar">Open sidebar</string>
    <string name="settings">Settings</string>
    <string name="home_sidebar">Home</string>
    <string name="profile_sidebar">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="medical_connect_gmail_com">medical.connect@gmail.com</string>
    <string name="_0763156651">0763156651</string>
    <string name="communicate">Communicate</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="start_page">Start Page</string>
    <string name="book_now_btn">Book now</string>
    <string name="suport_btn_description">Suport</string>
    <string name="hei_sunt_in_fragmnetul_de_setting">hei sunt in fragmnetul de setting</string>
    <string name="settingsFragm">Settings</string>
    <string name="account">Account</string>
    <string name="edit_profile_settings">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="more">More</string>
    <string name="notifications">Notifications</string>
    <string name="app_notification">App Notification</string>
    <string name="_0763156651Settings">0763156651</string>
    <string name="emailSettings">medical.connect@gmail.com</string>
    <string name="logoutSettings">Logout</string>
    <string name="john_doe">John Doe</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_new_password">Create New Password</string>
    <string name="logout">Logout</string>
    <string name="home_action_bar">Home</string>
    <string name="book_action_bar">Book</string>
    <string name="suport_action_bar">Suport</string>
    <string name="notifications_action_bar">Notifications</string>
    <string name="profile_action_bar">Profile</string>
    <string name="login">Login</string>
    <string name="your_health">your health !</string>
    <string name="let_us_take_care_of">Let us take care of</string>
    <string name="what_do_you_need_today">What do you need today?</string>
    <string name="doctors">Doctors</string>
    <string name="historic">Historic</string>
    <string name="online_consultation">Online Consultation</string>
    <string name="medical_tests">Medical tests</string>
    <string name="hello">Hello,</string>
    <string name="rating">Rating:</string>
    <string name="categories">Categories</string>
    <string name="doctor">Doctor</string>
    <string name="your_new_password_must_be_different_from_previously_used_password">Your New Password Must Be Different from Previously Used Password</string>
    <string name="experience">Experience :</string>
    <string name="specialization">Specialization:</string>
    <string name="consultation">Consultation</string>
    <string name="control">Control</string>
    <string name="choose_a_doctor">Choose a doctor</string>
    <string name="choose_a_specialization">Choose a specialization</string>
    <string name="total">Total:</string>
    <string name="schedule_yourself">Schedule yourself</string>
    <string name="medical_program">Medical program</string>
    <string name="profile_doctor">Profile Doctor</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="choose_one">Choose one</string>
    <string name="appointment_history">Appointment history</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="day">Day:</string>
    <string name="timee">Time:</string>
    <string name="schedule_now">Schedule now</string>
    <string name="news">News</string>
    <string name="news_main">News</string>
    <string name="appointment">Appointment</string>
    <string name="schedule_yourself_btn">Schedule yourself</string>
    <string name="profile_information">Profile information</string>


    />
</resources>