<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="418dp"
        android:layout_height="470dp"
        android:background="@drawable/custom_edit"
        app:cardCornerRadius="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/startgreen"
            android:contentDescription="@string/register"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="535dp"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="#FFFFFF"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="535dp"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="24dp"
            android:elevation="15dp">

            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerPage"
                android:textAlignment="center"
                android:textColor="#2d4334"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:autofillHints="name"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="14dp"
                android:hint="@string/full_name"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/mailRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="14dp"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/mobileRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:autofillHints="phone"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_phone_24"
                android:drawablePadding="14dp"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:autofillHints="birthdate"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawablePadding="14dp"
                android:hint="@string/date_of_birth"
                android:inputType="date"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textColorHighlight="@color/cardview_dark_background" />


            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14sp"
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:paddingStart="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtnFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/baseline_female_24"
                    android:text="@string/female"
                    android:textSize="18sp"
                    android:textColor="#2d4334"
                    android:padding="5dp"/>

                <RadioButton
                    android:id="@+id/radioBtnMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:drawableStart="@drawable/baseline_male_24"
                    android:text="@string/male"
                    android:textSize="18sp"
                    android:textColor="#2d4334"
                    android:padding="7sp"/>
            </RadioGroup>

            <EditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="14dp"
                android:hint="@string/passwordR"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/custom_edit"
                android:backgroundTint="#97e1ad"
                android:text="@string/register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>