<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".ChangePassFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white">

        <ImageView
            android:id="@+id/btnBackFragmChangePass"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/iconbackmain"
            android:contentDescription="@string/edit_profile"
            android:onClick="backToSideBarChangePass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_password"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.137" />

        <ImageView
            android:id="@+id/imgChangePassFragm"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_image_view"
            android:contentDescription="@string/change_password"
            android:scaleType="centerCrop"
            android:src="@drawable/iconchangepass"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.241" />


        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_new_password_must_be_different_from_previously_used_password"
            android:textSize="22sp"
            android:textStyle="normal"
            android:textColor="@color/gray1"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.426" />

        <EditText
            android:id="@+id/newPassChangeFragm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="14dp"
            android:hint="@string/new_password"
            android:layout_marginStart="50dp"
            android:textColorHint="@color/gray1"
            android:layout_marginEnd="50dp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:padding="10sp"
            android:textColor="@color/black"
            android:background="@drawable/custom_edittext"
            android:textColorHighlight="@color/gray1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.576"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.612" />

        <EditText
            android:id="@+id/newPassChangeFragmConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="14dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/gray1"
            android:padding="10sp"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="@drawable/custom_edittext"
            android:textColorHighlight="@color/gray1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.715" />

        <Button
            android:id="@+id/btnSaveFragmChangePass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background"
            android:elevation="20dp"
            android:padding="10sp"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.837" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>